Добавил пару страниц и работу над ними

--- a/some_folder/404.html
+++ b/some_folder/404.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Error</title>
 </head>
 <body>
-    <h1>hello</h1><br>
-    <a href = "./some_page.html">Вторая страница</a>
+    <h1>Error 404!</h1>
 </body>
 </html>
