--- a/some_folder/some_page.html
+++ b/some_folder/some_page.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Вторая страница</title>
 </head>
 <body>
-    <h1>hello</h1><br>
-    <a href = "./some_page.html">Вторая страница</a>
+    <h2>That was second page</h2><br>
+    <a href = "index.html">На Главную</a>
 </body>
 </html>
