--- a/some_folder/index.html
+++ b/some_folder/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>hello</h1><br>
-    <a href = "./some_page.html">Вторая страница</a>
+    <a href = "some_page.html">Вторая страница</a>
 </body>
 </html>
