Подключил офф. сайт агу

--- a/some_folder/index.html
+++ b/some_folder/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>hello</h1><br>
-    <a href = "some_page.html">Вторая страница</a>
+
+    <a href = "some_page.html">Вторая страница</a> 
+    
+    <a href = "agu">Сайт агу</a> <br>
+
+    <img src = "/some_images/2.jpg" width="600px" height="300px"> 
 </body>
 </html>
