--- a/some_folder/index.html
+++ b/some_folder/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <h1>hello</h1><br>
 
-    <a href = "some_page.html">Вторая страница</a> 
+    <a href = "some_page.html">Вторая страница</a> <br>
     
-    <a href = "agu">Сайт агу</a> <br>
+    <a id="agu" href = "agu" >Сайт агу xD !!</a> <br><br>
 
     <img src = "/some_images/2.jpg" width="600px" height="300px"> 
 </body>
