--- a/public/404.html
+++ b/public/404.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/style/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>error!</h1>
 </body>
 </html>
