--- a/public/index2.html
+++ b/public/index2.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/style/style.css">
-    <title>Page1</title>
+    <title>Page2</title>
 </head>
 <body>
-    <h1>Hello</h1>
-
-    <a href="/public/index2.html">to page2</a>
+    <h1>Page2</h1>
+    <a href="../index.html">You can back to page #1!</a>
 </body>
 </html>
