Заменил код "в лоб" на динамический.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hello</h1>
 
-    <a href="/public/index2.html">to page2</a>
+    <a href="/public/page2.html">to page #2</a>
 </body>
 </html>
