--- a/public/404.html
+++ b/public/404.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/public/style/style.css">
+    <title>404 error</title>
+    
 </head>
 <body>
-    <h1>Error</h1>
+    <h1 id="error">ERROR 404!</h1>
 </body>
 </html>
