Проверка запросов в консоли для отладки

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="/public/style/style.css">
     <title>Page1</title>
 </head>
-<body>
+<body id="mainHtml">
     <h1>Hello</h1>
 
     <a href="/public/page2.html">to page #2</a>
+    <img src="/public/img/someimg.jpg">
 </body>
 </html>
