--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Hello</h1>
 
     <a href="/public/page2.html">to page #2</a>
-    <img src="/public/img/someimg.jpg">
+    <!-- <img src="/public/img/someimg.jpg"> -->
 </body>
 </html>
