--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     <link rel="stylesheet" href="/public/style/style.css">
     <title>Page1</title>
 </head>
-<body id="mainHtml">
-    <h1>Hello</h1>
+<body >
 
-    <a href="/public/page2.html">to page #2</a>
-    <img src="/public/img/someimg.jpg">
+    <div  id  = "main" class="background">
+        <div class="blur">
+
+            <h1>Hello </h1> 
+            <h2>Node JS </h2>
+
+            <a class="link" href="/public/page2.html"> Вторая страница </a>
+
+        </div>
+    </div>
+
 </body>
 </html>
