--- a/public/page2.html
+++ b/public/page2.html
@@ -6,8 +6,14 @@
     <title>Page2</title>
     <link rel="stylesheet" href="/public/style/style.css">
 </head>
-<body>
-    <h1>Page2</h1>
-    <a href="../index.html">You can back to page #1!</a>
+<body id="secondPage" class="background">
+    <div class="blur">
+
+        <h1>Hey </h1>
+        <h2>TypeScript</h2>
+    <a class="link" id="link2" href="../index.html">На главную</a>
+
+    </div>
+    
 </body>
 </html>
