--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
     <title>404 error</title>
     
 </head>
-<body>
-    <h1 id="error">ERROR 404!</h1>
+<body id="errorPage">
+   
 </body>
 </html>
