--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Node JS</title>
 </head>
 <body >
+    
+    <div class="header">
+        <ul>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Форум</a></li>
+            <li><a href="#">Ссылки</a></li>
+            <li><a href="#">Контакты</a></li>
+        </ul>
+    </div>
+
 
     <div  id  = "main" class="background">
         <div class="blur">
